--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
     <nav id="menu">
       <ul class="links">
         <li><a href="/">Home</a></li>
-        <li><a href="/avg-war.html">Average WAR</a></li>
+        <li><a href="pages/avg-war.html">Average WAR</a></li>
         <li><a href="/promotion-relegation.html">Promotion/Relegation</a></li>
         <li><a href="/baseball-limericks.html">Baseball Limericks</a></li>
         <li><a href="/about-us.html">About Us</a></li>
@@ -33,12 +33,12 @@
             <table width="244px" cellpadding="1" cellspacing="1">
               <tr>
                 <td align="center" width="244px">
-                  <a href="http://www.baseballink.com" title="Baseball Ink"><img src="http://www.baseballink.com/assets/images/bi_logo_xsm.gif" width="200" height="71" alt="Baseball Ink" /></a>
+                  <a href="/" title="Baseball Ink"><img src="assets/images/bi_logo_xsm.gif" width="200" height="71" alt="Baseball Ink" /></a>
                 </td>
               </tr>
               <tr>
                 <td align="center" width="244px">
-                  <h5><a href="http://www.baseballink.com" title="Baseball Ink">Baseball The Way It Was Meant To Be</a></h5>
+                  <h5><a href="/" title="Baseball Ink">Baseball The Way It Was Meant To Be</a></h5>
                 </td>
               </tr>
             </table>
@@ -47,8 +47,8 @@
               <li id="admin">
                 <h4>The Dugout</h4>
                 <ul>
-                  <li><a href="http://www.baseballink.com">Home</a></li>
-                  <li><a href="http://www.baseballink.com/average-war" title="Average WAR">Average WAR</a></li>
+                  <li><a href="/">Home</a></li>
+                  <li><a href="pages/average-war.html" title="Average WAR">Average WAR</a></li>
                   <li><a href="http://www.baseballink.com/promotionrelegation" title="Promotion/Relegation">Promotion/Relegation</a></li>
                   <li><a href="http://www.baseballink.com/limericks" title="Baseball Limericks">Baseball Limericks</a></li>
                 </ul>
