--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
   <body>
     <!-- Header -->
     <header id="header">
-      <a href="/" class="logo">Baseball<strong>Ink</strong></a>
+      <a href="{{ site.baseurl }}" class="logo">Baseball<strong>Ink</strong></a>
       <nav>
         <a href="#menu">Menu</a>
       </nav>
@@ -18,8 +18,8 @@
     <!-- Nav -->
     <nav id="menu">
       <ul class="links">
-        <li><a href="/">Home</a></li>
-        <li><a href="pages/avg-war.html">Average WAR</a></li>
+        <li><a href="{{ site.baseurl }}">Home</a></li>
+        <li><a href="{{ site.baseurl }}pages/avg-war.html">Average WAR</a></li>
         <li><a href="/promotion-relegation.html">Promotion/Relegation</a></li>
         <li><a href="/baseball-limericks.html">Baseball Limericks</a></li>
         <li><a href="/about-us.html">About Us</a></li>
