--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,9 +20,9 @@
       <ul class="links">
         <li><a href="{{ site.baseurl }}">Home</a></li>
         <li><a href="{{ site.baseurl }}/pages/avg-war.html">Average WAR</a></li>
-        <li><a href="/promotion-relegation.html">Promotion/Relegation</a></li>
-        <li><a href="/baseball-limericks.html">Baseball Limericks</a></li>
-        <li><a href="/about-us.html">About Us</a></li>
+        <li><a href="{{ site.baseurl }}/pages/promotion-relegation.html">Promotion/Relegation</a></li>
+        <li><a href="{{ site.baseurl }}/pages/baseball-limericks.html">Baseball Limericks</a></li>
+        <li><a href="{{ site.baseurl }}/pages/about-us.html">About Us</a></li>
       </ul>
     </nav>
     <table width="1000px" cellpadding="2" cellspacing="2">
@@ -49,8 +49,9 @@
                 <ul>
                   <li><a href="{{ site.baseurl }}">Home</a></li>
                   <li><a href="{{ site.baseurl }}/pages/avg-war.html" title="Average WAR">Average WAR</a></li>
-                  <li><a href="http://www.baseballink.com/promotionrelegation" title="Promotion/Relegation">Promotion/Relegation</a></li>
-                  <li><a href="http://www.baseballink.com/limericks" title="Baseball Limericks">Baseball Limericks</a></li>
+                  <li><a href="{{ site.baseurl }}/pages/promotion-relegation.html" title="Promotion/Relegation">Promotion/Relegation</a></li>
+                  <li><a href="{{ site.baseurl }}/pages/baseball-limericks.html" title="Baseball Limericks">Baseball Limericks</a></li>
+                  <li><a href="{{ site.baseurl }}/pages/about-us.html" title="About Us">About Us</a></li>
                 </ul>
               </li>
               <!-- RECENT ARTICLES -->
