--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
       <tr>
         <td width="250px" valign="top">
           <!-- <?php get_sidebar(); ?> -->
-          <div id="sidebar">
+          <div id="menu">
             <table width="244px" cellpadding="1" cellspacing="1">
               <tr>
                 <td align="center" width="244px">
