--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,6 @@
     <table width="1000px" cellpadding="2" cellspacing="2">
       <tr>
         <td width="250px" valign="top">
-          <!-- <?php get_sidebar(); ?> -->
           <div id="menu">
             <table width="244px" cellpadding="1" cellspacing="1">
               <tr>
@@ -62,13 +61,13 @@
               <li>
                 <h4>Recent Articles</h4>
                 <ul>
-                  <li>• <a href='http://www.baseballink.com/archives/stories/average-war-for-2016-hall-of-fame-candidates-4062989'>Average WAR for 2016 Hall of Fame Candidates</a></li>
-                  <li>• <a href='http://www.baseballink.com/archives/stories/average-war-for-2015-hall-of-fame-candidates-4062980'>Average WAR for 2015 Hall of Fame Candidates</a></li>
-                  <li>• <a href='http://www.baseballink.com/archives/stories/average-war-for-2014-hall-of-fame-candidates-4062974'>Average WAR for 2014 Hall of Fame Candidates</a></li>
-                  <li>• <a href='http://www.baseballink.com/archives/stories/average-war-for-2013-hall-of-fame-candidates-4062953'>Average WAR for 2013 Hall of Fame Candidates</a></li>
-                  <li>• <a href='http://www.baseballink.com/archives/stories/nearly-half-2012-hof-firsties-not-starter-quality-4062892'>Nearly Half 2012 HoF Firsties Not Starter Quality</a></li>
-                  <li>• <a href='http://www.baseballink.com/archives/stories/average-war-for-2012-hall-of-fame-candidates-4062887'>Average WAR for 2012 Hall of Fame Candidates</a></li>
-                  <li>• <a href='http://www.baseballink.com/archives/stories/letter-to-the-editor-promotion-and-relegation-in-baseball-4062878'>Letter to the Editor &ndash; Promotion and Relegation in Baseball</a></li>
+                  <li>&bull;&nbsp;<a href='http://www.baseballink.com/archives/stories/average-war-for-2016-hall-of-fame-candidates-4062989'>Average WAR for 2016 Hall of Fame Candidates</a></li>
+                  <li>&bull;&nbsp;<a href='http://www.baseballink.com/archives/stories/average-war-for-2015-hall-of-fame-candidates-4062980'>Average WAR for 2015 Hall of Fame Candidates</a></li>
+                  <li>&bull;&nbsp;<a href='http://www.baseballink.com/archives/stories/average-war-for-2014-hall-of-fame-candidates-4062974'>Average WAR for 2014 Hall of Fame Candidates</a></li>
+                  <li>&bull;&nbsp;<a href='http://www.baseballink.com/archives/stories/average-war-for-2013-hall-of-fame-candidates-4062953'>Average WAR for 2013 Hall of Fame Candidates</a></li>
+                  <li>&bull;&nbsp;<a href='http://www.baseballink.com/archives/stories/nearly-half-2012-hof-firsties-not-starter-quality-4062892'>Nearly Half 2012 HoF Firsties Not Starter Quality</a></li>
+                  <li>&bull;&nbsp;<a href='http://www.baseballink.com/archives/stories/average-war-for-2012-hall-of-fame-candidates-4062887'>Average WAR for 2012 Hall of Fame Candidates</a></li>
+                  <li>&bull;&nbsp;<a href='http://www.baseballink.com/archives/stories/letter-to-the-editor-promotion-and-relegation-in-baseball-4062878'>Letter to the Editor &ndash; Promotion and Relegation in Baseball</a></li>
                 </ul>
               </li>
               <!-- PROMOTION/RELEGATION -->
@@ -176,11 +175,11 @@
                       <td>
                         <br />
                         2015 <a href="http://www.baseballink.com/promotionrelegation" title="Promotion/Relegation" style="font-weight: bold;">BPL</a> first-round matchups:
-                        <ul style="list-style-type: disc;">
-                          <li style="font-size: 8pt; font-weight: normal; line-height: 120%; text-transform: none;">&nbsp;&bull;&nbsp;(1) St Louis Cardinals vs<br />&nbsp;&nbsp;&nbsp;&nbsp;(8) Texas Rangers</li>
-                          <li style="font-size: 8pt; font-weight: normal; line-height: 120%; text-transform: none;">&nbsp;&bull;&nbsp;(4) Kansas City Royals vs<br />&nbsp;&nbsp;&nbsp;&nbsp;(5) Toronto Blue Jays</li>
-                          <li style="font-size: 8pt; font-weight: normal; line-height: 120%; text-transform: none;">&nbsp;&bull;&nbsp;(3) Chicago Cubs vs<br />&nbsp;&nbsp;&nbsp;&nbsp;(6) Los Angeles Dodgers</li>
-                          <li style="font-size: 8pt; font-weight: normal; line-height: 120%; text-transform: none;">&nbsp;&bull;&nbsp;(2) Pittsburgh Pirates vs<br />&nbsp;&nbsp;&nbsp;&nbsp;(7) New York Mets</li>
+                        <ul>
+                          <li>&bull;&nbsp;(1) St Louis Cardinals vs<br />&nbsp;&nbsp;&nbsp;&nbsp;(8) Texas Rangers</li>
+                          <li>&bull;&nbsp;(4) Kansas City Royals vs<br />&nbsp;&nbsp;&nbsp;&nbsp;(5) Toronto Blue Jays</li>
+                          <li>&bull;&nbsp;(3) Chicago Cubs vs<br />&nbsp;&nbsp;&nbsp;&nbsp;(6) Los Angeles Dodgers</li>
+                          <li>&bull;&nbsp;(2) Pittsburgh Pirates vs<br />&nbsp;&nbsp;&nbsp;&nbsp;(7) New York Mets</li>
                         </ul>
                       </td>
                     </tr>
