--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -176,10 +176,10 @@
                         <br />
                         2015 <a href="http://www.baseballink.com/promotionrelegation" title="Promotion/Relegation" style="font-weight: bold;">BPL</a> first-round matchups:
                         <ul>
-                          <li>&bull;&nbsp;(1) St Louis Cardinals vs<br />&nbsp;&nbsp;&nbsp;&nbsp;(8) Texas Rangers</li>
-                          <li>&bull;&nbsp;(4) Kansas City Royals vs<br />&nbsp;&nbsp;&nbsp;&nbsp;(5) Toronto Blue Jays</li>
-                          <li>&bull;&nbsp;(3) Chicago Cubs vs<br />&nbsp;&nbsp;&nbsp;&nbsp;(6) Los Angeles Dodgers</li>
-                          <li>&bull;&nbsp;(2) Pittsburgh Pirates vs<br />&nbsp;&nbsp;&nbsp;&nbsp;(7) New York Mets</li>
+                          <li style="font-size: 8pt; font-weight: normal;">&bull;&nbsp;(1) St Louis Cardinals vs<br />&nbsp;&nbsp;&nbsp;&nbsp;(8) Texas Rangers</li>
+                          <li style="font-size: 8pt; font-weight: normal;">&bull;&nbsp;(4) Kansas City Royals vs<br />&nbsp;&nbsp;&nbsp;&nbsp;(5) Toronto Blue Jays</li>
+                          <li style="font-size: 8pt; font-weight: normal;">&bull;&nbsp;(3) Chicago Cubs vs<br />&nbsp;&nbsp;&nbsp;&nbsp;(6) Los Angeles Dodgers</li>
+                          <li style="font-size: 8pt; font-weight: normal;">&bull;&nbsp;(2) Pittsburgh Pirates vs<br />&nbsp;&nbsp;&nbsp;&nbsp;(7) New York Mets</li>
                         </ul>
                       </td>
                     </tr>
