--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
             <table width="244px" cellpadding="1" cellspacing="1">
               <tr>
                 <td align="center" width="244px">
-                  <a href="{{ site.url }}{{ site.baseurl }}" title="Baseball Ink"><img src="assets/images/bi_logo_xsm.gif" width="200" height="71" alt="Baseball Ink" /></a>
+                  <a href="{{ site.url }}{{ site.baseurl }}" title="Baseball Ink"><img src="{{ site.url }}{{ site.baseurl }}/assets/images/bi_logo_xsm.gif" width="200" height="71" alt="Baseball Ink" /></a>
                 </td>
               </tr>
               <tr>
@@ -58,6 +58,7 @@
                 </ul>
               </li>
               <!-- RECENT ARTICLES -->
+<!--              
               <li>
                 <h4>Recent Articles</h4>
                 <ul>
@@ -70,7 +71,9 @@
                   <li>&bull;&nbsp;<a href='http://www.baseballink.com/archives/stories/letter-to-the-editor-promotion-and-relegation-in-baseball-4062878'>Letter to the Editor &ndash; Promotion and Relegation in Baseball</a></li>
                 </ul>
               </li>
+-->
               <!-- PROMOTION/RELEGATION -->
+<--              
               <li>
                 <h4>2015 <a href="http://www.baseballink.com/promotionrelegation" style="font-size: 90%;">PROMOTION/RELEGATION</a></h4>
                 <table style="font-size: 8pt; font-weight: normal; line-height: 120%; text-transform: none;" border="1" cellspacing="2" cellpadding="2" width="210">
@@ -304,6 +307,7 @@
                   </tbody>
                 </table>
               </li>
+-->            
             </ul>
           </div>
         </td>
