--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Baseball Ink {{ page.title }}</title>
+    <title>Baseball Ink{% if page.title != 'Home' %}&nbsp;&bull;&nbsp;{{ page.title }}{% endif %}</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/css/main.css" />
