--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -325,6 +325,14 @@
       </tr>
     </table>
     <!-- Footer -->
+    <div class="clearer"></div>
+    <div id="footer1">
+    Copyright &copy; 2000-2017 <a href="{{ site.url }}{{ site.baseurl }}/pages/about-us.html">Baseball Ink</a>
+      &nbsp;&nbsp;&#8226;&nbsp;&nbsp;<a href="{{ site.url }}{{ site.baseurl }}/pages/about-us.html">About Us</a>
+      &nbsp;&nbsp;&#8226;&nbsp;&nbsp;<a href="http://www.facebook.com/pages/Baseball-Ink/106910028062" title="Baseball Ink on Facebook" target="_blank"><img src="{{ site.url }}{{ site.baseurl }}/assets/images/facebook.gif" alt="Baseball Ink on Facebook" width="16" height="16" border="0" align="top" /></a>
+      &nbsp;&nbsp;&#8226;&nbsp;&nbsp;<a href="http://twitter.com/BaseballInk" title="Baseball Ink on Twitter" target="_blank"><img src="{{ site.url }}{{ site.baseurl }}/assets.images/twitter.gif" alt="Baseball Ink on Twitter" width="16" height="16" border="0" align="top" /></a>
+    </div>
+<!--
     <footer id="footer">
       <ul class="icons">
         <li><a href="http://www.facebook.com/pages/Baseball-Ink/106910028062" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
@@ -334,6 +342,7 @@
         Copyright 2000-2017 &copy; <a href="{{ site.url }}{{ site.baseurl }}/pages/about-us.html">Baseball Ink</a>. Design: <a href="https://templated.co">TEMPLATED</a>.
       </div>
     </footer>
+-->
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.scrolly.min.js"></script>
